fixed bookmarks window size on mobile

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -138,6 +138,7 @@
 
   @include media(bp-740px) {
     top: 13rem;
+    width: 50rem;
   }
 
   &__list {
